Images added and css adjusted

--- a/index.html
+++ b/index.html
@@ -16,22 +16,25 @@
         <div class="left-section">
             <div class="top-container">
                 <input type="text" placeholder="Search for places">
-                <img src="" alt="Weather main icon">
-                <h1>12°C</h1>
+                <img src="assets/clear-sky.png"
+                    style="max-width: 200px; padding: 5% 2% 5% 2%; margin-top: 20px; margin-bottom: 20px;"
+                    alt="Weather main icon">
+                <h1>12°c</h1>
                 <h3>Monday, <span>16:00</span></h3>
             </div>
             <hr>
             <div class="bottom-container">
                 <div class="condition">
-                    <img src="" alt="condition">
+                    <img src="assets/cloud.png" style="width: 30px; height: 35px; padding: 0%; margin-top: 4px;"
+                        alt="condition">
                     <p>Mostly Cloudy</p>
                 </div>
                 <div class="humidity">
-                    <img src="" alt="humidity">
+                    <img src="assets/water.png" style="width: 30px; height: 30px; padding: 0%; margin-top: 6px;"
+                        alt="humidity">
                     <p>Rain - 30%</p>
                 </div>
                 <div class="city-image">
-                    <img src="" alt="city image">
                     <h3>New York, NY, USA</h3>
                 </div>
             </div>
@@ -47,43 +50,43 @@
                 <div class="options">
                     <button>°C</button>
                     <button>°F</button>
-                    <img src="" alt="profile image">
+                    <img src="" alt="">
                 </div>
             </div>
             <div class="week">
                 <div>
                     <p>Sun</p>
-                    <img src="" alt="icon">
+                    <img src="assets/rainy-day.png" alt="icon">
                     <p>15°C <span>-3°C</span></p>
                 </div>
                 <div>
                     <p>Mon</p>
-                    <img src="" alt="icon">
+                    <img src="assets/clear-sky.png" alt="icon">
                     <p>12°C <span>7°C</span></p>
                 </div>
                 <div>
                     <p>Tue</p>
-                    <img src="" alt="icon">
+                    <img src="assets/storm.png" alt="icon">
                     <p>9°C <span>7°C</span></p>
                 </div>
                 <div>
                     <p>Wed</p>
-                    <img src="" alt="icon">
+                    <img src="assets/sun.png" alt="icon">
                     <p>8°C <span>-1°C</span></p>
                 </div>
                 <div>
                     <p>Thu</p>
-                    <img src="" alt="icon">
+                    <img src="assets/raining.png" alt="icon">
                     <p>5°C <span>-2°C</span></p>
                 </div>
                 <div>
                     <p>Fri</p>
-                    <img src="" alt="icon">
+                    <img src="assets/cloudy (2).png" alt="icon">
                     <p>4°C <span>-4°C</span></p>
                 </div>
                 <div>
                     <p>Sun</p>
-                    <img src="" alt="icon">
+                    <img src="assets/sun.png" alt="icon">
                     <p>3°C <span>-3°C</span></p>
                 </div>
             </div>
@@ -98,21 +101,21 @@
                         <p>Wind Status</p>
                         <h1>7.70 km/h</h1>
                         <div>
-                            <img src="" alt="bousole">
+                            <img src="assets/compass.png" alt="bousole">
                             <p>WSW</p>
                         </div>
                     </div>
                     <div class="sunrise-sunset">
                         <p>Sunrise & Sunset</p>
                         <div class="sunrise-container">
-                            <img src="" alt="up">
+                            <img src="assets/arrow (1).png" alt="up">
                             <div>
                                 <p>6:35 AM</p>
                                 <p>- 1m 46s</p>
                             </div>
                         </div>
                         <div class="sunrise-container">
-                            <img src="" alt="down">
+                            <img src="assets/arrow (2).png" alt="down">
                             <div>
                                 <p>5:42 PM</p>
                                 <p>+ 2m 22s</p>
